src/objects/Local_Counsel__c.object
<CustomObject>
    <fields>
        <fullName>Local_Counsel_Firm_Address__c</fullName>
        <formula>IF( NOT( ISNULL(Motorola_Counsel_Lead_Account__c)), (Motorola_Counsel_Lead_Account__r.BillingCity + Motorola_Counsel_Lead_Account__r.BillingCountry + Motorola_Counsel_Lead_Account__r.BillingStreet + Motorola_Counsel_Lead_Account__r.BillingPostalCode) ,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Counsel Firm Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Counsel_Firm_FAX_Number__c</fullName>
        <formula>IF( NOT( ISNULL(Motorola_Counsel_Lead_Account__c)),  Motorola_Counsel_Lead_Account__r.Fax , &apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Counsel Firm FAX Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Counsel_Firm_Main_Office_Phone_Num__c</fullName>
        <formula>IF( NOT( ISNULL(Motorola_Counsel_Lead_Account__c)),  Motorola_Counsel_Lead_Account__r.Phone ,   Motorola_Counsel_Lead_MCD__r.WorkPhone__c  )</formula>
        <label>Local Counsel Firm Main Office Phone Num</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Counsel_Firm_Name__c</fullName>
        <formula>IF( NOT( ISNULL(Motorola_Counsel_Lead_Account__c)), Motorola_Counsel_Lead_Account__r.Name, Motorola_Counsel_Lead_MCD__r.Name)</formula>
        <label>Local Counsel Firm Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Counsel_Firm_email_address__c</fullName>
        <formula>IF( NOT( ISNULL(Motorola_Counsel_Lead_Account__c)), &apos;&apos; ,  Motorola_Counsel_Lead_MCD__r.FriendlyEmailAddress__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Counsel Firm email address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Motorola_Counsel_Core_ID__c</fullName>
        <label>Motorola Counsel Core ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Motorola_Counsel_Lead_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Counsel Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Local Counsels</relationshipLabel>
        <relationshipName>Local_Counsels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Motorola_Counsel_Lead_MCD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Motorola Counsel Lead (Motorolan)</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>Local Counsels</relationshipLabel>
        <relationshipName>Local_Counsels</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Local Counsel</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Firm Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Local Counsels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Only_Select_One_Counsel</fullName>
        <active>true</active>
        <description>Will fire if both the MCD and Account lookup fields are populated at the same time</description>
        <errorConditionFormula>AND( Motorola_Counsel_Lead_Account__c != &apos;&apos;,  Motorola_Counsel_Lead_MCD__c != &apos;&apos;)</errorConditionFormula>
        <errorMessage>Both the account and Motorola core directory lookups cannot be populated at the same time. Please select only one</errorMessage>
    </validationRules>
</CustomObject>